Added manifest button

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
 
   <string name="storage_permission_denied">Permission to access storage was denied</string>
 
+  <string name="master_manifest">Manifest</string>
+
 </resources>
