--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -16,43 +15,64 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-  <!-- The user visible name of the application. [CHAR LIMIT=20] -->
-  <string name="application_name">ExoPlayer Demo</string>
+    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
+    <string name="application_name">ExoPlayer Demo</string>
 
-  <string name="enable_background_audio">Play in background</string>
+    <string name="enable_background_audio">Play in background</string>
 
-  <string name="video">Video</string>
+    <string name="video">Video</string>
 
-  <string name="audio">Audio</string>
+    <string name="audio">Audio</string>
 
-  <string name="text">Text</string>
+    <string name="text">Text</string>
 
-  <string name="logging">Logging</string>
+    <string name="logging">Logging</string>
 
-  <string name="logging_normal">Normal</string>
+    <string name="logging_normal">Normal</string>
 
-  <string name="logging_verbose">Verbose</string>
+    <string name="logging_verbose">Verbose</string>
 
-  <string name="retry">Retry</string>
+    <string name="retry">Retry</string>
 
-  <string name="off">[off]</string>
+    <string name="off">[off]</string>
 
-  <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
+    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
 
-  <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
+    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
 
-  <string name="error_drm_unknown">An unknown DRM error occurred</string>
+    <string name="error_drm_unknown">An unknown DRM error occurred</string>
 
-  <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
+    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
 
-  <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
+    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
 
-  <string name="error_querying_decoders">Unable to query device decoders</string>
+    <string name="error_querying_decoders">Unable to query device decoders</string>
 
-  <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
+    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
 
-  <string name="storage_permission_denied">Permission to access storage was denied</string>
+    <string name="storage_permission_denied">Permission to access storage was denied</string>
 
-  <string name="master_manifest">Manifest</string>
+    <string name="master_manifest">Manifest</string>
+    <string name="manifest_type">Type: %s</string>
+    <string name="manifest_base_uri">Base URI: %s</string>
+    <string name="manifest_muxed_audio_lang">Muxed Audio Language: %s</string>
+    <string name="manifest_muxed_caption_lang">Muxed Caption Language: %s</string>
+    <string name="manifest_variants">VARIANTS</string>
+    <string name="manifest_audios">AUDIOS</string>
+    <string name="manifest_subtitles">SUBTITLES</string>
+
+
+    <string name="variant_format">FORMAT</string>
+    <string name="variant_url">URL: %s</string>
+    <string name="variant_id">ID: %s</string>
+    <string name="variant_mime_type">Mime Type: %s</string>
+    <string name="variant_bitrate">Bitrate: %d</string>
+    <string name="variant_audio_channels">Audio Channels: %d</string>
+    <string name="variant_audio_sampling_rate">Audio Sampling Rate: %d</string>
+    <string name="variant_codecs">Codecs: %s</string>
+    <string name="variant_language">Language: %s</string>
+    <string name="variant_width">Width: %d</string>
+    <string name="variant_height">Height: %d</string>
+    <string name="variant_frame_rate">Frame Rate: %f</string>
 
 </resources>
